[gd_scene load_steps=30 format=2]

[ext_resource path="res://scripts/tank/Tank.gd" type="Script" id=1]
[ext_resource path="res://sprites/tankBody_green_outline.png" type="Texture" id=2]
[ext_resource path="res://sprites/montserrat.otf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/glassPanel_200.png" type="Texture" id=4]
[ext_resource path="res://sprites/barHorizontal_green_mid 200.png" type="Texture" id=5]
[ext_resource path="res://scenes/effect/Explosion.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/tankBlue_barrel2_outline.png" type="Texture" id=7]
[ext_resource path="res://sprites/shotLarge.png" type="Texture" id=8]
[ext_resource path="res://sprites/tankBody_dark_outline.png" type="Texture" id=9]
[ext_resource path="res://sprites/tankBody_red_outline.png" type="Texture" id=10]
[ext_resource path="res://sprites/tankBody_sand_outline.png" type="Texture" id=11]
[ext_resource path="res://sprites/tankBody_blue_outline.png" type="Texture" id=12]
[ext_resource path="res://sprites/tankSand_barrel2_outline.png" type="Texture" id=13]
[ext_resource path="res://sprites/tankRed_barrel2_outline.png" type="Texture" id=14]
[ext_resource path="res://sprites/tankDark_barrel2_outline.png" type="Texture" id=15]
[ext_resource path="res://sprites/tankGreen_barrel2_outline.png" type="Texture" id=16]
[ext_resource path="res://sprites/shield_1.png" type="Texture" id=17]
[ext_resource path="res://sprites/shield_2.png" type="Texture" id=18]
[ext_resource path="res://sound/explosion_2.ogg" type="AudioStream" id=19]
[ext_resource path="res://sound/bullet_shot.ogg" type="AudioStream" id=20]
[ext_resource path="res://sound/bullet_hit_1.ogg" type="AudioStream" id=21]
[ext_resource path="res://sound/powerup_pick.ogg" type="AudioStream" id=22]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38.5, 37.75 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "fire"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Turret/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Turret/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0496847, 0.08 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "init"
tracks/0/type = "value"
tracks/0/path = NodePath("Turret/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "shield",
"speed": 5.0
} ]

[node name="Tank" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Body" type="AnimatedSprite" parent="."]
rotation = 3.14159
frames = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.75 )
shape = SubResource( 1 )

[node name="Turret" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
offset = Vector2( 0, 20 )

[node name="Muzzle" type="Position2D" parent="Turret"]
position = Vector2( 0, 65 )

[node name="Sprite" type="Sprite" parent="Turret"]
position = Vector2( 0, 77 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = -33.0
margin_top = -77.0
margin_right = 36.0
margin_bottom = -56.0
custom_fonts/font = SubResource( 2 )
text = "hoangkt"

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -39.0
margin_top = -56.0
margin_right = 161.0
margin_bottom = -30.0
rect_scale = Vector2( 0.4, 0.4 )
value = 100.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "init"
anims/fire = SubResource( 4 )
anims/init = SubResource( 3 )

[node name="Explosion" parent="." instance=ExtResource( 6 )]
visible = false
frame = 0
playing = false

[node name="Shield" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 7 )
animation = "shield"

[node name="ShieldTimer" type="Timer" parent="."]

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -5.0

[node name="ShootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -5.0

[node name="TakeDamageAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )

[node name="PickUpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -5.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="timeout" from="ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
